[project]
name = "rdfc_proto"
version = "1.0.0"
description = "Python protobuf bindings for RDF-Connect"
authors = [
    { name = "Ieben Smessaert", email = "ieben.smessaert@ugent.be" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"
dependencies = [
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=6.31.1",
    "types-protobuf>=6.30.2.20250703",
]

[project.urls]
Homepage = "https://rdf-connect.github.io"
Repository = "https://github.com/rdf-connect/proto"
Issues = "https://github.com/rdf-connect/proto/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rdfc_proto"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
system-packages = false
installer = "uv"

[tool.hatch.envs.default.scripts]
proto = """
    python -m grpc_tools.protoc \
        --proto_path=../proto \
        --python_out=./src/rdfc_proto/generated \
        --pyi_out=./src/rdfc_proto/generated \
        --grpc_python_out=./src/rdfc_proto/generated \
        ../proto/*.proto \
    && python fix_proto_imports.py
"""